data/derived/comb/progs/unify/prog1419.ml.out
Characters 154-155:
  List.fold_left f base l;;
                        ^
Error: This expression has type string -> string -> string
       but an expression was expected of type string list
